data/test/regression/type_check/fail/include_1.v
// Unguarded circular include
`include "include_2.v"
